Added saving of generated data
