# src/core/evet_type.py
@@ -8,5 +8,6 @@ class event_type(Enum):
     CHANGE_NOMENCLATURE = 2
     GET_NOMENCLATURE = 3
     PUT_NOMENCLATURE = 4
-    CHANGE_RANGE = 5
-    CHANGE_DATE_BLOCK = 6
+    SAVE_DATA_REPOSITY = 5
+    RESTORE_DATA_REPOSITY = 6
+    CHANGE_DATE_BLOCK = 7
